--- a/package.json
+++ b/package.json
@@ -6,9 +6,11 @@
     "@testing-library/jest-dom": "^5.16.4",
     "@testing-library/react": "^13.3.0",
     "@testing-library/user-event": "^13.5.0",
+    "antd": "^4.22.3",
     "bootstrap": "^5.1.3",
     "react": "^18.2.0",
     "react-bootstrap": "^2.4.0",
+    "react-dimmer": "^1.0.7",
     "react-dom": "^18.2.0",
     "react-pagination-bar": "^1.0.8",
     "react-router-dom": "^6.3.0",
